--- a/templates/base.html
+++ b/templates/base.html
@@ -27,17 +27,12 @@
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('dashboard') }}">
-                            <i class="fas fa-chart-line"></i> Panel de Control
+                            <i class="fas fa-map-marked-alt"></i> Mapa de Incidentes
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('report_incident') }}">
                             <i class="fas fa-exclamation-triangle"></i> Reportar Incidente
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('real_time_map') }}">
-                            <i class="fas fa-map-marked-alt"></i> Mapa en Tiempo Real
                         </a>
                     </li>
                     {% endif %}
